--- a/index.html
+++ b/index.html
@@ -85,7 +85,20 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
         </nav>
-        <div class="container banner"></div><img class="img-responsive center-block" src="img/banner.jpg" alt="">
+        <div class="container-fluid banner pa0">
+            <!-- <img class="img-responsive center-block" src="img/banner.jpg" alt=""> -->
+            <div id="myCarousel" class="carousel slide">
+                    <!-- Carousel items -->
+                    <div class="carousel-inner">
+                        <div class="active item"><img class="img-responsive center-block" src="img/banner.jpg" alt=""></div>
+                        <div class="item"><img class="img-responsive center-block" src="img/banner.jpg" alt=""></div>
+                        <div class="item"><img class="img-responsive center-block" src="img/banner.jpg" alt=""></div>
+                    </div>
+                    <!-- Carousel nav -->
+                    <a class="carousel-control left" href="#myCarousel" data-slide="prev">‹</a>
+                    <a class="carousel-control right" href="#myCarousel" data-slide="next">›</a>
+            </div>
+        </div>
         <!-- about us -->
         <div class="container-fluid about">
             <div class="container">
